# ek-paperless

./: .gitignore  DAILY REPORT.xlsx  app.py  master_data.xlsx  requirements.txt  supabase_current_state.md
.claude/: settings.local.json
.github/workflows/: flash_cost_report.yml  inventory_reminder.yml
.streamlit/: config.toml
modules/: arabizi.py  auto_calc.py  branch_config.py  clients.py  constants.py  daily_cash.py  dashboard.py  dpos.py  dpos_simulation.py  email_helper.py  inventory.py  invoices.py  ledger.py  main.py  nav_helper.py  overview.py  push_to_database.py  recipe_report.py  recipes.py  transfers.py  waste.py  worldwide_master_items.py
scripts/: release.py  send_flash_cost_report.py  send_inventory_reminder.py
supa import/: pyproject.toml
supa import/src/supa_import/: config.py  db.py  loaders.py  modeling.py  saver.py  streamlit_functions.py  validators.py
